Rearrange CTplayer and Transcription component to get around with the z-index issue.

--- a/src/components/CTPlayer/Wrapper/InteractiveLayer/ActionBar/Share/index.scss
+++ b/src/components/CTPlayer/Wrapper/InteractiveLayer/ActionBar/Share/index.scss
@@ -2,9 +2,7 @@ $ctp-share-popup-bgcolor: rgb(53, 53, 53);
 
 .ctp.share-root {
   position: relative;
-
-  //modification for live player
-  right: 39vw;
+  right: 0;
 
   z-index: 10;
   display: flex;
