--- a/src/components/CTPlayer/Wrapper/index.scss
+++ b/src/components/CTPlayer/Wrapper/index.scss
@@ -2,7 +2,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  //width: 100%;
+  width: 62vw;
   height: 100%;
 }
 
